syntax = "proto3";

package pb;

import "trade.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message TradeListRequest {
  string market_id = 1;
}

message TradeListResponse {
  repeated Trades trades = 1;
}